# CCC

./: .coverage  .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_WIKI.md  CONTRIBUTING.md  DESIGN-VALIDATION.md  LICENSE  ONBOARDING.md  README.md  SECURITY.md  SKILL.md  SSOT.md  STARTUP-BRIEF.md  VERSION  distribution-report.md  package.json  pyproject.toml  requirements-hub.txt
.archived-2026-07-06/: README.md
.cargo/: config.toml
.ccc/: .dev_auto_retry.json  AGENTS.md  COMMIT_MESSAGE.txt  infrastructure.md  metrics.json  profile.md  state.md
.cursor/: hooks.json
.planning/: .active_plan
db/: hp_pg.py
desktop/: Package.swift  README.md  package.json
docs/: CONTRIBUTING.md  CONTROL.md  GETTING-STARTED.md  GLOSSARY.md  INDEX.md  INTRO-WALKTHROUGH.md  INTRO.md  NEXT-DUAL-TRACK.md  OBS1.md  OBS3.md  STRATEGY-MAP.md  TROUBLESHOOTING.md  USAGE.md  VISION.md  agent-commands.md  architecture-core.md  architecture.md  automation-levels-and-arch.md  ccc-frontend-unification-plan.md  ccc-hub-ports.md  chat-ccc-integration.md  chat-server-v2-polish.md  config.md  decision-boundary.md  dev-workflow.md  devlog-2026-07-07.md  execution-protocol.md  fix-plan-v0.29.md  flow-review.md  handoff-checklist.md  handoff-report.md  hub-ops-console.md  lessons.md  migration-B1.md  model-tier-strategy.md  next-upgrade-roadmap.md  observability.md  patrol-v4.md  plan-spec.md  program-housekeeping.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs  server.rs
(+2378 files in other folders)
