[package]
name = "ccc-cockpit-desktop"
version = "0.30.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "notification-all", "dialog-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pico-args = "0.5"
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
